# snowflake-ai-demos

./: .gitignore  README.md  Readme.md
.snowflake/: settings.json
call-center-agent/: data-generation.ipynb  prepare-unstructured-data.ipynb
core-ml-demo/: pyproject.toml
core-ml-demo/notebooks/: predictive-maintenance-model-training.ipynb
core-ml-demo/src/demo_functions/: demo_flow.py
mapping-master-data-demo/: Readme.md  batch-search-native.sql  batch-search-sproc.sql  data-generation.sql
mapping-master-data-demo/search-app/: pyproject.toml  streamlit_app.py
predictive-maintenance-mlops-demo/: README.md
semantic-view-autopilot/: business-queries.sql  data-generation.sql
unstructured-to-structured-demo/: service-tickets-demo.sql  tickets-demo.ipynb
warehouse-capacity-planning/: README.md  Readme.md  pyproject.toml
warehouse-capacity-planning/notebooks/: end-2-end-warehouse-capacity-planning.ipynb
warehouse-capacity-planning/src/demo_functions/: __init__.py  data_generation.py  plotting.py
